# django-starter-kit

./: .gitignore  AGENT_LOGS.md  BRIEF.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  OPENTELEMETRY.md  README.md  mise.toml  pyproject.toml
apps/api/: serializers.py  urls.py  views.py
apps/api/schemas/: __init__.py  user.py
apps/core/: models.py
apps/users/: admin.py  models.py  signals.py  utils.py
apps/users/migrations/: 0001_initial.py  0001_squashed_0003_alter_user_id.py  0002_alter_user_id.py  0002_userauditlog_user_deactivated_at_user_is_verified_and_more.py  0003_user_users_user_first_n_0186c7_idx_and_more.py  0004_alter_user_email_alter_user_username_and_more.py  0005_alter_userauditlog_user_agent.py
apps/users/tests/: __init__.py  test_models.py  test_utils.py
config/: asgi.py  otel.py  urls.py
config/settings/: __init__.py  base.py  dev.py  production.py  test.py
dev/: docker-compose.dev.yml
frontend/: package.json  pnpm-lock.yaml  vite.config.mjs
frontend/src/js/: main.js
frontend/src/js/controllers/: welcome-svelte.js
templates/: base.html
