[project]
name = "django-starter-kit"
version = "0.1.0"
description = "A modern, high-performance Django 5.2 LTS starter kit with best practices"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core
    "django==5.2",
    "django-environ>=0.11.2",
    "granian[reload,uvloop]>=2.5.1",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.6.0",
    # Auth
    "django-allauth[idp-oidc,socialaccount]>=65.11.0",
    # API
    "django-modern-rest[jwt,msgspec,openapi]>=0.9.0",
    # Typing
    "django-stubs==5.2.9",
    # Frontend
    "django-vite>=3.1.0",
    "django-htmx>=1.0.0",
    # Storage & Media
    "django-storages>=1.14.0",
    "django-imagekit>=5.0.0",
    "pillow>=10.0.0",
    "boto3>=1.30.0",
    # Email
    "django-anymail>=10.0",
    # Cache
    "django-redis>=5.3.0",
    "django-cacheops>=7.0",
    # Background Tasks
    "django-dramatiq>=0.14.0",
    "dramatiq[redis,watch]>=1.18.0",
    # Real-time
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
    # CORS
    "django-cors-headers>=4.3.0",
    # Observability
    "sentry-sdk>=1.40.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation-django>=0.57b0",
    "opentelemetry-instrumentation-psycopg>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    # Audit
    "django-auditlog>=3.0.0",
    # Dev & Testing
    "ruff>=0.12.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "django-debug-toolbar>=6.0.0",
    # Utilities
    "requests>=2.31.0",
    "uuid-utils>=0.15.0",
    "django-unfold>=0.93.0",
    "django-constance>=4.3.5",
    "django-guardian>=3.3.1",
    "django-import-export>=4.4.1",
    "django-simple-history>=3.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
